style.css
* {
  box-sizing: border-box;
}

#app {
  font-size: 5em;
  text-align: center;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

#header {
  background-color: #f3ca40;
  height: 20vh;
  width: 100vw;
}

#middle {
  display: flex;
  justify-content: space-around;
  align-items: stretch;
  height: 60vh;
  width: 100vw;
}

#main {
  display: flex;
  width: 80%;
}

#nav {
  width: 20%;
  background-color: #4b4e6d;
}

#articles {
  width: 60vw;
  background-color: #6a8d92;
}

#ads {
  width: 20vw;
  background-color: #f2a541;
}

#footer {
  height: 20vh;
  width: 100vw;
  background-color: #f08a4b;
}

@media screen and (max-width: 1100px) {

  #nav {
      width: 100%;
  }

}

@media screen and (max-width: 700px) {

  #nav {
      width: 100%;
  }

}

